# HikingFoodPlanner

./: README.md  beta_database.txt  beta_database_ingredients.csv  beta_database_meals.csv  config.ini  connector.py  error_handling.py  food_backend.py  gui_framework.py  gui_helper_classes.py  gui_main_classes.py  gui_major_popup_classes.py  gui_popup_classes.py  gui_tab_classes.py  main.py  pyproject.toml  requirements.txt  setup.py  style.css  test.txt  test_ingredients.csv  test_meals.csv  testing.py  trip_backend.py
PyHikingPlanner/: README.md  main.py  setup.py
PyHikingPlanner/app/: connector.py
PyHikingPlanner/backend/: trip.py
PyHikingPlanner/gui/: helper_classes.py  main_classes.py  popup_classes.py  tab_classes.py
app/: connector.py  error_handling.py  main.py
backend/: food.py  trip.py
config/: beta_database.txt  config.ini
data/: beta_database_meals.csv
gui/: helper_classes.py  main_classes.py  popup_classes.py  style.css  tab_classes.py
saves/databases/: backpacking_database.txt  backpacking_database_meals.csv  time_test.txt  time_test_ingredients.csv  time_test_meals.csv
saves/trips/: Urho_Kekkonen_2022.csv  test1.csv
src/app/: connector.py
src/backend/: shopping_list.py  trip.py
src/gui/: helper_classes.py  main_classes.py  popup_classes.py  tab_classes.py
