[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PyHikingPlanner"
version = "0.0.1"
authors = [
  { name="Elias Ankerhold", email="elias.ankerhold@gmail.com" },
]
description = "Python Application for customizable, precise meal planning."
readme = "README.md"
license = { file="LICENSE.txt" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL-3.0-or-later License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/TheBlueCookie/HikingFoodPlanner"